# lmt-clamarm

./: .gitignore
docs/: ConnectorServo56.dae  ConnectorServo56.skp
lmt_clamarm/: CMakeLists.txt  arm_jointstate_0-6.launch  arm_keyboard.py  create_fastik.sh  demo_ik.py  demo_move.sh  dynamixel_joint_controllers.yaml  follow_torque.py  package.xml  readme.txt  setup.py  shell_dynamixel.py  test_ik_shell.sh
lmt_clamarm/fastik/: _gen_clam.urdf  clam.robot.xml  ik_test  round_collada_numbers.py
lmt_clamarm/model/: clam.xacro
lmt_clamarm/src/: kinematics_base_py.cpp
lmt_clamarm/src/lmt_clamarm/: joint_state_controller.py
lmt_clamarm_moveit_ikfast/: CMakeLists.txt  lmtclam_arm_moveit_ikfast_plugin_description.xml
lmt_clamarm_moveit_ikfast/src/: lmtclam_arm_ikfast_moveit_plugin.cpp
lmtclam/: CMakeLists.txt  arm_jointstate_0-6.launch  dynamixel_joint_controllers.yaml  package.xml  readme_dynamixel.txt  setup.py
lmtclam/ikfast/: _gen_clam.urdf  _gen_ikfast61.round5.cpp
lmtclam/model/: clam.xacro  tool_none.xacro  tool_pen.xacro
lmtclam/model/stl/: MX28T.dae
lmtclam/scripts/: arm_keyboard.py  create_ikfast.sh  demo_ik.py  demo_move.sh  follow_torque.py  round_collada_numbers_copy.py  shell_dynamixel.py  test_ik_shell.sh
lmtclam/src/: kinematics_base_py.cpp
lmtclam/src/lmtclam/: joint_state_controller.py
lmtclam_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
lmtclam_moveit_config/config/: clam.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  lmtclam.srdf  ompl_planning.yaml
lmtclam_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
lmtclam_moveit_ikfast/: CMakeLists.txt  lmtclam_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
lmtclam_moveit_ikfast/src/: lmtclam_arm_ikfast_moveit_plugin.cpp  lmtclam_arm_ikfast_solver.cpp
